src/test/deca/context/invalid/langage_essentiel/deuxieme_passe/regle_2_3_1.deca
// Description:
//    regle 2.3 condition
//
// Resultats:
//    Ligne 6: 'x' is a field and a method at once.
class A {
    int x;
    void x() {
    }
}

// raison : opération partielle ⊕
//  message : « un nom de méthode redéclare un nom de champ »
